Fixed a Crash and made some minor fixes.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -161,6 +161,7 @@
   "item.goety.warlock_spawn_egg": "Warlock Spawn Egg",
   "item.goety.crone_spawn_egg": "Crone Spawn Egg",
   "item.goety.wraith_spawn_egg": "Wraith Spawn Egg",
+  "item.goety.border_wraith_spawn_egg": "Border Wraith Spawn Egg",
   "item.goety.cairn_necromancer_spawn_egg": "Cairn Necromancer Spawn Egg",
   "item.goety.haunted_armor_spawn_egg": "Haunted Armor Spawn Egg",
   "item.goety.zombie_servant_spawn_egg": "Zombie Servant Spawn Egg",
