Tweaked some block textures and improved Redstone Golem.

--- a/src/main/resources/assets/goety/lang/zh_cn.json
+++ b/src/main/resources/assets/goety/lang/zh_cn.json
@@ -89,6 +89,7 @@
   "entity.goety.skeleton_servant":"骷髅仆从",
   "entity.goety.stray_servant":"流躅仆从",
   "entity.goety.necromancer_servant":"死灵法师仆从",
+  "entity.goety.vanguard_servant":"先锋仆从",
   "entity.goety.wraith_servant":"幽灵仆从",
   "entity.goety.haunted_armor_servant":"缠魂仆胄",
   "entity.goety.haunted_skull":"缠魂飞颅",
@@ -172,6 +173,7 @@
   "item.goety.skeleton_servant_spawn_egg": "骷髅仆从刷怪蛋",
   "item.goety.stray_servant_spawn_egg": "流躅仆从刷怪蛋",
   "item.goety.necromancer_servant_spawn_egg": "死灵法师仆从刷怪蛋",
+  "item.goety.vanguard_servant_spawn_egg": "先锋仆从刷怪蛋",
   "item.goety.wraith_servant_spawn_egg": "幽灵仆从刷怪蛋",
   "item.goety.haunted_skull_spawn_egg": "缠魂飞颅刷怪蛋",
   "item.goety.envioker_spawn_egg": "恶妒者刷怪蛋",
@@ -252,6 +254,7 @@
   "item.goety.warred_scroll": "战争卷轴",
   "item.goety.buried_scroll": "埋葬卷轴",
   "item.goety.haunting_scroll": "作祟卷轴",
+  "item.goety.front_scroll": "先锋卷轴",
 
   "item.goety.forbidden_piece": "被遗忘的碎片",
   "item.goety.forbidden_fragment": "被遗忘的片段",
@@ -339,6 +342,7 @@
   "item.goety.rotting_focus": "腐烂聚晶",
   "item.goety.osseous_focus": "骨质聚晶",
   "item.goety.spooky_focus": "骇人聚晶",
+  "item.goety.vanguard_focus": "先锋聚晶",
   "item.goety.skull_focus": "头颅聚晶",
   "item.goety.iceology_focus": "冰川聚晶",
   "item.goety.barricade_focus": "障碍聚晶",
@@ -696,12 +700,14 @@
   "info.goety.items.buried": "一个无名王国的古代手稿...",
   "info.goety.items.haunting": "附身战士的咒语..",
   "info.goety.items.forbidden_scroll": "通往不朽的秘密...",
+  "info.goety.items.front": "一个无名国王的诅咒...",
 
   "info.goety.research.ravaging": "你理解了制造劫掠兽的方法!",
   "info.goety.research.warred": "你明晰了制作红石傀儡的方法!",
   "info.goety.research.buried": "你了解了死灵法术的无名之路!",
   "info.goety.research.haunting": "你已经学会了制作幽灵盔甲的方法!",
   "info.goety.research.lich": "§4你通晓了不朽之名....",
+  "info.goety.research.front": "你明白了召唤先锋的方式!",
 
   "info.goety.hunger_pendent.amount": "§2腐肉:§2 %d",
   "info.goety.sea_amulet.amount": "§3潮涌充能:§3 %d",
@@ -833,10 +839,16 @@
   "subtitle.goety.necromancer_step": "亡灵法师：行走",
   "subtitle.goety.necromancer_death": "亡灵法师：死亡",
 
-  "subtitle.goety.haunted_armor_ambient": "闹鬼盔甲：鬼叫",
-  "subtitle.goety.haunted_armor_hurt": "闹鬼盔甲：受伤",
-  "subtitle.goety.haunted_armor_step": "闹鬼盔甲：行走",
-  "subtitle.goety.haunted_armor_death": "闹鬼盔甲：死亡",
+  "subtitle.goety.vanguard_ambient": "先锋：嘎嘎作响",
+  "subtitle.goety.vanguard_hurt": "先锋：受伤",
+  "subtitle.goety.vanguard_spear": "先锋：戳刺",
+  "subtitle.goety.vanguard_step": "先锋：行走",
+  "subtitle.goety.vanguard_death": "先锋：死亡",
+
+  "subtitle.goety.haunted_armor_ambient": "缠魂甲胄：鬼叫",
+  "subtitle.goety.haunted_armor_hurt": "缠魂甲胄：受伤",
+  "subtitle.goety.haunted_armor_step": "缠魂甲胄：行走",
+  "subtitle.goety.haunted_armor_death": "缠魂甲胄：死亡",
 
   "subtitle.goety.zombie_ravager_ambient": "僵尸劫掠兽：咕哝",
   "subtitle.goety.zombie_ravager_hurt": "僵尸劫掠兽：受伤",
@@ -852,6 +864,8 @@
   "subtitle.goety.redstone_golem_pre_attack": "红石傀儡：准备攻击",
   "subtitle.goety.redstone_golem_attack": "红石傀儡：粉碎攻击",
   "subtitle.goety.redstone_golem_novelty": "红石傀儡：恐吓",
+  "subtitle.goety.redstone_golem_chest": "Redstone Golem smash chest",
+  "subtitle.goety.redstone_golem_growl": "红石傀儡：怒吼",
   "subtitle.goety.redstone_golem_step": "红石傀儡：行走",
   "subtitle.goety.redstone_golem_death": "红石傀儡：死亡",
 
@@ -884,9 +898,12 @@
   "subtitle.goety.fire_breath": "火焰呼吸",
   "subtitle.goety.soul_armor": "灵魂盔甲已就位",
   "subtitle.goety.prepare_spell": "准备施法",
+  "subtitle.goety.prepare_summon": "准备召唤",
   "subtitle.goety.cast_spell": "施法",
   "subtitle.goety.necro_cast": "施法",
   "subtitle.goety.summon_spell": "施法",
+  "subtitle.goety.vanguard_spell": "施法",
+  "subtitle.goety.vanguard_summon": "施法",
   "subtitle.goety.bolt_impact": "灵魂束冲击",
   "subtitle.goety.soul_explode": "灵魂爆炸",
   "subtitle.goety.wind": "风爆",
@@ -938,12 +955,12 @@
   "advancements.goety.craft_infuser.title": "受诅咒的元素",
   "advancements.goety.craft_infuser.description": "把它放在刷怪笼上，使其开始工作.",
   "advancements.goety.craft_magic_emerald.title": "灾厄村民的秘密",
-  "advancements.goety.craft_magic_emerald.description": "看起来这里有比绿宝石更多的东西...比之前还要多...",
+  "advancements.goety.craft_magic_emerald.description": "看起来这不是普通的绿宝石...或许能让它觉醒...",
   "advancements.goety.craft_totem.title": "支配自我",
   "advancements.goety.craft_totem.description": "制作灵魂图腾.",
   "advancements.goety.craft_cursed_ingot.title": "亵渎金属",
   "advancements.goety.craft_cursed_ingot.description": "它们看起来像是组成刷怪笼的金属...",
-  "advancements.goety.craft_empty_focus.title": "我玩啥呢, 神秘时代?",
+  "advancements.goety.craft_empty_focus.title": "这是什么, 神秘时代?",
   "advancements.goety.craft_empty_focus.description": "在做其他事之前，拥有一根自己的魔杖或许是不错的选择。.",
   "advancements.goety.craft_dark_wand.title": "哦...又一次...",
   "advancements.goety.craft_dark_wand.description": "制作黑暗魔杖",
@@ -1017,6 +1034,8 @@
   "advancements.goety.haunting_scroll.description": "阅读作祟卷轴，发现作祟之道.",
   "advancements.goety.unlock_necromancer.title": "简易视界",
   "advancements.goety.unlock_necromancer.description": "发现制作亡灵巫师的秘密.",
+  "advancements.goety.front_scroll.title": "跟我的龙矛兵打打招呼吧！",
+  "advancements.goety.front_scroll.description": "阅读先锋卷轴，探寻冲刺之理.",
   "advancements.goety.forbidden_scroll.title": "祖母的秘密配方",
   "advancements.goety.forbidden_scroll.description": "阅读被遗忘的卷轴，通晓不朽的秘密.",
   "advancements.goety.summon_redstone_golem.title": "千锤百炼",
