--- a/src/main/resources/assets/goety/lang/zh_cn.json
+++ b/src/main/resources/assets/goety/lang/zh_cn.json
@@ -1,60 +1,60 @@
 {
-  "name.goety.apostle.0" : "Leprosy",
-  "name.goety.apostle.1" : "Nosghoul",
-  "name.goety.apostle.2" : "Javan Mal",
-  "name.goety.apostle.3" : "Ezrafel",
-  "name.goety.apostle.4" : "Finbar",
-  "name.goety.apostle.5" : "Avageleon",
-  "name.goety.apostle.6" : "Ur-Tsar",
-  "name.goety.apostle.7" : "Khormack",
-  "name.goety.apostle.8" : "Gan'Dak",
-  "name.goety.apostle.9" : "Armon",
-  "name.goety.apostle.10" : "Baal Zephon",
-  "name.goety.apostle.11" : "Vexx Mock",
-  "name.goety.apostle.12" : "Krozen",
-  "name.goety.apostle.13" : "Kim'Se",
-  "name.goety.apostle.14" : "Margo Sil",
-  "name.goety.apostle.15" : "Seraphent",
-  "name.goety.apostle.16" : "Indearium",
-  "name.goety.apostle.17" : "Salahmon",
+  "name.goety.apostle.0" : "麻风",
+  "name.goety.apostle.1" : "诺斯高",
+  "name.goety.apostle.2" : "扎瓦·马尔",
+  "name.goety.apostle.3" : "艾斯崔佛",
+  "name.goety.apostle.4" : "芬巴",
+  "name.goety.apostle.5" : "安沃珍妮",
+  "name.goety.apostle.6" : "乌尔沙皇",
+  "name.goety.apostle.7" : "科马克",
+  "name.goety.apostle.8" : "甘阿达",
+  "name.goety.apostle.9" : "阿蒙",
+  "name.goety.apostle.10" : "巴尔·塞冯",
+  "name.goety.apostle.11" : "威克斯·默克",
+  "name.goety.apostle.12" : "科森",
+  "name.goety.apostle.13" : "坎普斯",
+  "name.goety.apostle.14" : "马戈·西里",
+  "name.goety.apostle.15" : "萨勒芬妮",
+  "name.goety.apostle.16" : "因德瑞姆",
+  "name.goety.apostle.17" : "萨拉赫蒙",
 
-  "title.goety.0" : "Risen",
-  "title.goety.1" : "Abhorrent",
-  "title.goety.2" : "Defiler",
-  "title.goety.3" : "Dark",
-  "title.goety.4" : "Great Shadow",
-  "title.goety.5" : "Witch King",
-  "title.goety.6" : "Pyre Lord",
-  "title.goety.7" : "Profane",
-  "title.goety.8" : "Cruel",
-  "title.goety.9" : "Terrible",
-  "title.goety.10" : "Glorious",
-  "title.goety.11" : "Atrocious",
+  "title.goety.0" : "重生",
+  "title.goety.1" : "憎恶",
+  "title.goety.2" : "毒蝎之尾",
+  "title.goety.3" : "漆黑之骨",
+  "title.goety.4" : "黑天使之影",
+  "title.goety.5" : "女巫之王",
+  "title.goety.6" : "爆燃领主",
+  "title.goety.7" : "饥荒",
+  "title.goety.8" : "冷酷寒冬",
+  "title.goety.9" : "可怖之物",
+  "title.goety.10" : "辉煌荣耀",
+  "title.goety.11" : "十恶不赦",
 
-  "name.goety.crone.0" : "Gertrud",
-  "name.goety.crone.1" : "Matilda",
-  "name.goety.crone.2" : "Grimhilde",
-  "name.goety.crone.3" : "Olga",
-  "name.goety.crone.4" : "Edna",
-  "name.goety.crone.5" : "Agatha",
-  "name.goety.crone.6" : "Oozegoggle",
-  "name.goety.crone.7" : "Ratwart",
-  "name.goety.crone.8" : "Bonewaggle",
-  "name.goety.crone.9" : "Flametooth",
-  "name.goety.crone.10" : "Gravespitter",
-  "name.goety.crone.11" : "Muckback",
+  "name.goety.crone.0" : "格特鲁德",
+  "name.goety.crone.1" : "玛蒂尔达",
+  "name.goety.crone.2" : "格林希尔德",
+  "name.goety.crone.3" : "奥尔加",
+  "name.goety.crone.4" : "埃德娜",
+  "name.goety.crone.5" : "阿加莎",
+  "name.goety.crone.6" : "欧娜薇咖咖",
+  "name.goety.crone.7" : "拉特瓦特",
+  "name.goety.crone.8" : "邦妮外咖",
+  "name.goety.crone.9" : "弗拉姆透斯",
+  "name.goety.crone.10" : "格瑞伍·斯派特",
+  "name.goety.crone.11" : "芒克拜克",
 
-  "name.goety.crone.12" : "Zhovch",
-  "name.goety.crone.13" : "Didʹka",
-  "name.goety.crone.14" : "Nedza",
-  "name.goety.crone.15" : "Ohydnyy",
-  "name.goety.crone.16" : "Boli",
-  "name.goety.crone.17" : "Strach",
+  "name.goety.crone.12" : "兆炽",
+  "name.goety.crone.13" : "迪卡",
+  "name.goety.crone.14" : "奈撒",
+  "name.goety.crone.15" : "欧黑聂",
+  "name.goety.crone.16" : "博利",
+  "name.goety.crone.17" : "施特拉赫",
 
-  "title.goety.crone.0" : "Baba",
-  "title.goety.crone.1" : "Granny",
-  "title.goety.crone.2" : "Old",
-  "title.goety.crone.3" : "Aunt",
+  "title.goety.crone.0" : "大爷",
+  "title.goety.crone.1" : "外婆",
+  "title.goety.crone.2" : "老人",
+  "title.goety.crone.3" : "姑妈",
 
   "itemGroup.goetyTab": "圣洁",
 
@@ -578,15 +578,17 @@
   "effect.goety.sense_loss": "感官缺失",
   "effect.goety.sense_loss.description": "让玩家失明，或降低生物的能见度范围，高等级会进一步降低能见度。",
   "effect.goety.flame_hands": "烈焰之手",
-  "effect.goety.flame_hands.description": "物理攻击使实体燃烧4秒，每级持续时间增加。",
+  "effect.goety.flame_hands.description": "近战攻击使实体燃烧4秒，每级持续时间增加。",
   "effect.goety.venomous_hands": "剧毒之手",
-  "effect.goety.venomous_hands.description": "物理攻击会对实体施加中毒效果，每级增加10秒中毒效果。",
+  "effect.goety.venomous_hands.description": "近战攻击会对实体施加中毒效果，每级增加10秒中毒效果。",
   "effect.goety.repulsive": "排斥",
   "effect.goety.repulsive.description": "攻击会击退实体；级别越高，击退距离越远。",
   "effect.goety.explosive": "一触即发",
   "effect.goety.explosive.description": "受伤时有可能引发爆炸；等级越高，几率和爆发强度越高。",
   "effect.goety.swift_swim": "速泳",
   "effect.goety.swift_swim.description": "在游泳的时候给予速度效果。",
+  "effect.goety.insight": "洞悉",
+  "effect.goety.insight.description": "双倍经验掉落，药效等级越高，掉落倍率越高.",
   "effect.goety.fire_trail": "炽焰步伐",
   "effect.goety.fire_trail.description": "行走会使地面着火.",
   "effect.goety.fiery_aura": "炽热气场",
@@ -617,7 +619,7 @@
   "effect.goety.chop_tree": "砍树",
   "effect.goety.blind_jump": "盲跳",
   "effect.goety.bats": "蝙蝠爆发",
-  "effect.goety.bees": "蜜蜂啊啊啊啊啊啊啊",
+  "effect.goety.bees": "蜜蜂嗡嗡",
   "effect.goety.combust": "烧竭术",
   "effect.goety.extinguish": "熄火",
   "effect.goety.sweet_thorns": "甜蜜荆棘",
@@ -953,7 +955,7 @@
   "advancements.goety.root.title": "黑暗艺术",
   "advancements.goety.root.description": "作为灾厄魔法师，开始您的旅程",
   "advancements.goety.craft_infuser.title": "受诅咒的元素",
-  "advancements.goety.craft_infuser.description": "把它放在刷怪笼上，使其开始工作.",
+  "advancements.goety.craft_infuser.description": "制作一个诅咒注入器，把它放在刷怪笼上，使其开始工作.",
   "advancements.goety.craft_magic_emerald.title": "灾厄村民的秘密",
   "advancements.goety.craft_magic_emerald.description": "看起来这不是普通的绿宝石...或许能让它觉醒...",
   "advancements.goety.craft_totem.title": "支配自我",
@@ -975,13 +977,13 @@
   "advancements.goety.craft_dark_altar.title": "灵魂要素粉碎机",
   "advancements.goety.craft_dark_altar.description": "把黑暗祭坛放置在含有灵魂图腾的诅咒笼的上方.",
   "advancements.goety.craft_necro_brazier.title": "深处的篝火",
-  "advancements.goety.craft_necro_brazier.description": "需要放置在深暗之域中的含有或转移宝石的诅咒笼子之顶.",
+  "advancements.goety.craft_necro_brazier.description": "亡灵篝火需要放置在深暗之域中的含有灵魂图腾或转移宝石的诅咒笼子的顶部.",
   "advancements.goety.craft_dark_ingot.title": "第十七号档案",
   "advancements.goety.craft_dark_ingot.description": "获得黑暗金属锭.",
   "advancements.goety.craft_grave_gloves.title": "妥善处理",
-  "advancements.goety.craft_grave_gloves.description": "提高镰刀的攻击速度.",
+  "advancements.goety.craft_grave_gloves.description": "掘墓手套可以提高镰刀的攻击速度.",
   "advancements.goety.craft_dark_scythe.title": "碎尸万段",
-  "advancements.goety.craft_dark_scythe.description": "每次命中都会赋予灵魂能量。如果副手什么都不拿，攻击速度会增加.",
+  "advancements.goety.craft_dark_scythe.description": "镰刀每次命中都会赋予灵魂能量。如果副手什么都不拿，攻击速度会增加.",
   "advancements.goety.craft_star_amulet.title": "我说过了今天不行！",
   "advancements.goety.craft_star_amulet.description": "当穿戴者的血量降低到一半以下，护符会抵抗箭矢伤害.",
   "advancements.goety.craft_ring_of_want.title": "...我也想像那样一样!",
@@ -997,8 +999,8 @@
   "advancements.goety.craft_witch_robe.title": "我们可以烧死她吗?",
   "advancements.goety.craft_witch_robe.description": "女巫袍提供85%的魔法保护和便携式酿造。同时穿长袍和戴帽子可使女巫保持中立。",
   "advancements.goety.craft_necro_set.title": "病入膏肓",
-  "advancements.goety.craft_necro_set.description": "戴上亡灵王冠和斗篷不会使任何一个亡灵首领成为中立。亡灵之杖可以增幅亡灵咒语.",
-  "advancements.goety.craft_illusion_robe.title": "困惑",
+  "advancements.goety.craft_necro_set.description": "戴上亡灵王冠和斗篷不会使任何一个亡灵Boss成为中立。亡灵之杖可以增幅亡灵咒语.",
+  "advancements.goety.craft_illusion_robe.title": "海市蜃楼？",
   "advancements.goety.craft_illusion_robe.description": "改进隐形效果和镜像法术.",
   "advancements.goety.craft_wind_robe.title": "起风了",
   "advancements.goety.craft_wind_robe.description": "烈风长袍会给予你缓降，并降低风法术灵魂消耗.",
@@ -1013,7 +1015,7 @@
   "advancements.goety.find_crypt.title": "毛骨悚然",
   "advancements.goety.find_crypt.description": "找到进入墓穴的路.",
   "advancements.goety.kill_skull_lord.title": "碎颅锤",
-  "advancements.goety.kill_skull_lord.description": "击败骷髅领主，墓穴的古代主人.",
+  "advancements.goety.kill_skull_lord.description": "击败骷髅领主，墓穴的古代之主.",
   "advancements.goety.kill_crone.title": "理应如此",
   "advancements.goety.kill_crone.description": "击败巫婆，沼泽地的酿造大师.",
   "advancements.goety.kill_apostle.title": "下界之影",
@@ -1021,14 +1023,14 @@
   "advancements.goety.craft_philosophers_mace.title": "迈达斯之触",
   "advancements.goety.craft_philosophers_mace.description": "可以秒破几乎任何一个方块，并使生物掉落金粒.",
   "advancements.goety.craft_death_scythe.title": "灵魂收割者",
-  "advancements.goety.craft_death_scythe.description": "在蓄力满的情况下，可以发出一发剑气，摧毁附近的一切.",
+  "advancements.goety.craft_death_scythe.description": "死神镰刀在蓄力满的情况下，可以发出一发剑气，摧毁附近的一切.",
   "advancements.goety.kill_minister.title": "科妮莉亚点了个赞",
-  "advancements.goety.kill_minister.description": "击败灾厄部长，贪婪而有号召力的灾厄村民首领.",
+  "advancements.goety.kill_minister.description": "击败灾厄使者，贪婪而有号召力的灾厄村民首领.",
   "advancements.goety.kill_vizier.title": "一千零一夜",
   "advancements.goety.kill_vizier.description": "击败灾厄宰相，一位刌民的皇室官员.",
   "advancements.goety.ravaging_scroll.title": "野蛮与残暴",
   "advancements.goety.ravaging_scroll.description": "阅读劫掠卷轴，探索暴虐之道.",
-  "advancements.goety.warred_scroll.title": "严肃但无意义",
+  "advancements.goety.warred_scroll.title": "沉重但无意义",
   "advancements.goety.warred_scroll.description": "阅读战争卷轴，理解战争之道.",
    "advancements.goety.haunting_scroll.title": "尽归尘土",
   "advancements.goety.haunting_scroll.description": "阅读作祟卷轴，发现作祟之道.",
