--- a/src/main/resources/assets/goety/lang/zh_cn.json
+++ b/src/main/resources/assets/goety/lang/zh_cn.json
@@ -698,6 +698,7 @@
 
   "info.goety.items.dark_scroll.desc": "必须在林地府邸中才可使用.",
   "info.goety.items.dark_scroll.failure": "你现在不在林地府邸里!",
+  "info.goety.items.scroll": "右键单击可阅读卷轴.",
   "info.goety.items.ravaging": "一位唤魔者的仪式备忘单.",
   "info.goety.items.warred": "古代战争机器的模板.",
   "info.goety.items.buried": "一个无名王国的古代手稿...",
