More Lichdom Configs and a Dark Altar enhancement.

--- a/src/main/resources/assets/goety/lang/zh_cn.json
+++ b/src/main/resources/assets/goety/lang/zh_cn.json
@@ -56,7 +56,7 @@
   "title.goety.crone.2" : "老人",
   "title.goety.crone.3" : "姑妈",
 
-  "itemGroup.goetyTab": "圣洁",
+  "itemGroup.goetyTab": "诡厄巫法",
 
   "entity.goety.apostle":"使徒",
   "entity.goety.obsidian_monolith":"黑曜石巨柱",
@@ -602,7 +602,7 @@
   "effect.goety.photosynthesis.description": "在阳光下恢复生命值；高等级会再生的更快.",
   "effect.goety.flammable": "助燃性",
   "effect.goety.flammable.description": "含有此效果的实体会受到火的额外伤害；有抗火效果则会无视.",
-  "effect.goety.save_effects": "不灭之效",
+  "effect.goety.save_effects": "永恒",
   "effect.goety.save_effects.description": "在玩家死亡之后保存身上持有的效果，如果玩家是极限模式则失效。",
   "effect.goety.wild_rage": "野性狂暴",
   "effect.goety.wild_rage.description": "含有此效果的实体将瞄准并攻击附近任何可攻击的实体.",
@@ -661,24 +661,24 @@
   "enchantment.goety.absorb.desc": "玩家使用法术伤害生物的时候可以回复生命值.",
   "enchantment.goety.duration.desc": "使法术变的持久.",
 
-  "key.goety.category": "圣洁",
+  "key.goety.category": "诡厄巫法",
   "key.goety.wand": "打开法杖聚晶槽",
   "key.goety.focusCircle": "打开聚晶圆环",
   "key.goety.bag": "打开聚晶包",
   "key.goety.ceaseFire": "停止施法",
 
-  "key.goety.lich.category": "圣洁 巫妖",
+  "key.goety.lich.category": "诡厄巫法 巫妖",
   "key.goety.lich.lichMode": "巫妖模式",
   "key.goety.lich.magnet": "巫妖吸引",
   "key.goety.lich.lichKiss": "巫妖之吻",
 
-  "key.goety.witch.category": "圣洁 女巫",
+  "key.goety.witch.category": "诡厄巫法 女巫",
   "key.goety.witch.robe": "打开女巫袍",
   "key.goety.witch.addFuel": "添加燃料",
   "key.goety.witch.addCatalyst": "添加瓶子或催化剂",
   "key.goety.witch.extractPotions": "提取药剂",
 
-  "key.goety.ravager.category": "圣洁 劫掠兽",
+  "key.goety.ravager.category": "诡厄巫法 劫掠兽",
   "key.goety.ravager.roar": "劫掠兽：咆哮",
   "key.goety.ravager.freeRoam": "劫掠兽：自由模式",
 
@@ -966,7 +966,7 @@
   "advancements.goety.craft_infuser.title": "受诅咒的元素",
   "advancements.goety.craft_infuser.description": "制作一个诅咒注入器，把它放在刷怪笼上，使其开始工作.",
   "advancements.goety.craft_magic_emerald.title": "灾厄村民的秘密",
-  "advancements.goety.craft_magic_emerald.description": "看起来这不是普通的绿宝石...或许能让它觉醒...",
+  "advancements.goety.craft_magic_emerald.description": "看起来这不是普通的绿宝石...或许有什么办法能它苏醒...",
   "advancements.goety.craft_totem.title": "支配自我",
   "advancements.goety.craft_totem.description": "制作灵魂图腾.",
   "advancements.goety.craft_cursed_ingot.title": "亵渎金属",
@@ -1046,7 +1046,7 @@
   "advancements.goety.unlock_necromancer.title": "简易视界",
   "advancements.goety.unlock_necromancer.description": "发现制作亡灵巫师的秘密.",
   "advancements.goety.front_scroll.title": "跟我的龙矛兵打打招呼吧！",
-  "advancements.goety.front_scroll.description": "阅读先锋卷轴，探寻冲刺之理.",
+  "advancements.goety.front_scroll.description": "阅读先锋卷轴，探寻破阵之理.",
   "advancements.goety.forbidden_scroll.title": "祖母的秘密配方",
   "advancements.goety.forbidden_scroll.description": "阅读被遗忘的卷轴，通晓不朽的秘密.",
   "advancements.goety.summon_redstone_golem.title": "千锤百炼",
