--- a/src/main/resources/assets/goety/lang/zh_cn.json
+++ b/src/main/resources/assets/goety/lang/zh_cn.json
@@ -70,8 +70,8 @@
   "entity.goety.armored_ravager":"劫掠兽",
   "entity.goety.zombie_ravager":"僵尸劫掠兽",
   "entity.goety.redstone_golem":"红石傀儡",
-  "entity.goety.grave_golem":"Grave Golem",
-  "entity.goety.haunt":"Haunt",
+  "entity.goety.grave_golem":"墓灵巨像",
+  "entity.goety.haunt":"墓灵",
   "entity.goety.zpiglin_servant":"僵尸猪灵仆从",
   "entity.goety.zpiglin_brute_servant":"僵尸猪灵蛮兵仆从",
   "entity.goety.malghast":"凶魂",
@@ -188,8 +188,8 @@
   "item.goety.skull_lord_spawn_egg": "骷髅领主刷怪蛋",
   "item.goety.ravaged_spawn_egg": "劫掠者刷怪蛋",
   "item.goety.redstone_golem_spawn_egg": "红石傀儡刷怪蛋",
-  "item.goety.grave_golem_spawn_egg": "Grave Golem Spawn Egg",
-  "item.goety.haunt_spawn_egg": "Haunt Spawn Egg",
+  "item.goety.grave_golem_spawn_egg": "墓灵巨像刷怪蛋",
+  "item.goety.haunt_spawn_egg": "墓灵刷怪蛋",
   "item.goety.zpiglin_servant_spawn_egg": "僵尸猪灵仆从刷怪蛋",
   "item.goety.zpiglin_brute_servant_spawn_egg": "僵尸猪灵蛮兵仆从刷怪蛋",
 
@@ -214,7 +214,7 @@
 
   "item.goety.fanged_dagger": "尖牙匕首",
   "item.goety.fell_blade": "堕落之刃",
-  "item.goety.frozen_blade": "Frozen Blade",
+  "item.goety.frozen_blade": "霜冻之刃",
 
   "item.goety.eerie_pickaxe": "诡异之镐",
   "item.goety.rampaging_axe": "狂暴之斧",
@@ -301,10 +301,10 @@
   "item.goety.cursed_knight_leggings": "诅咒骑士护腿",
   "item.goety.cursed_knight_boots": "诅咒骑士靴子",
 
-  "item.goety.cursed_paladin_helmet": "Cursed Paladin Helmet",
-  "item.goety.cursed_paladin_chestplate": "Cursed Paladin Chestplate",
-  "item.goety.cursed_paladin_leggings": "Cursed Paladin Leggings",
-  "item.goety.cursed_paladin_boots": "Cursed Paladin Boots",
+  "item.goety.cursed_paladin_helmet": "诅咒圣骑士头盔",
+  "item.goety.cursed_paladin_chestplate": "诅咒圣骑士胸甲",
+  "item.goety.cursed_paladin_leggings": "诅咒圣骑士护腿",
+  "item.goety.cursed_paladin_boots": "诅咒圣骑士靴子",
 
   "item.goety.dark_helmet": "黑暗头盔",
   "item.goety.dark_chestplate": "黑暗胸甲",
@@ -750,10 +750,10 @@
   "info.goety.servant.follow": "%s 现在处于跟随状态",
   "info.goety.lichdom.success": "§6你已经超脱了生命层次!",
   "info.goety.lichdom.fail": "你还没有做好饮用万灵之药的准备!",
-  "info.goety.soul.cost.fail": "Requires %s Soul Energy!",
-  "info.goety.research.fail": "You don't have the research for this!",
-  "info.goety.block.fail": "Inefficient Block Requirements!",
-  "info.goety.summon.limit": "You've reached the limit for this summon!",
+  "info.goety.soul.cost.fail": "需要 %s 灵魂能量!",
+  "info.goety.research.fail": "你还没有这方面的研究!",
+  "info.goety.block.fail": "无效的方块要求!",
+  "info.goety.summon.limit": "你已经达到了召唤上限!",
   "info.goety.apostle.summon": "§0黑暗笼罩于你...",
 
   "filled_map.goety.blighted_shack": "腐烂木屋探险家地图",
@@ -892,16 +892,16 @@
   "subtitle.goety.redstone_golem_step": "红石傀儡：行走",
   "subtitle.goety.redstone_golem_death": "红石傀儡：死亡",
 
-  "subtitle.goety.grave_golem_ambient": "Grave Golem growls",
-  "subtitle.goety.grave_golem_hurt": "Grave Golem hurts",
-  "subtitle.goety.grave_golem_awaken": "Grave Golem awakes",
-  "subtitle.goety.grave_golem_blast": "Grave Golem blasts",
-  "subtitle.goety.grave_golem_growl": "Grave Golem growls",
-  "subtitle.goety.grave_golem_step": "Grave Golem steps",
-  "subtitle.goety.grave_golem_death": "Grave Golem dies",
+  "subtitle.goety.grave_golem_ambient": "墓灵巨像：咆哮",
+  "subtitle.goety.grave_golem_hurt": "墓灵巨像：受伤",
+  "subtitle.goety.grave_golem_awaken": "墓灵巨像：苏醒",
+  "subtitle.goety.grave_golem_blast": "墓灵巨像：爆裂",
+  "subtitle.goety.grave_golem_growl": "墓灵巨像：吼叫",
+  "subtitle.goety.grave_golem_step": "墓灵巨像：行走",
+  "subtitle.goety.grave_golem_death": "墓灵巨像：死亡",
 
-  "subtitle.goety.haunt_ambient": "Haunt haunts",
-  "subtitle.goety.haunt_hurt": "Haunt hurts",
+  "subtitle.goety.haunt_ambient": "墓灵：作祟",
+  "subtitle.goety.haunt_hurt": "墓灵：受伤",
 
   "subtitle.goety.vizier_ambient": "灾厄宰相：嘀咕",
   "subtitle.goety.vizier_hurt": "灾厄宰相：受伤",
@@ -1083,8 +1083,8 @@
   "advancements.goety.forbidden_scroll.description": "阅读被遗忘的卷轴，通晓不朽的秘密.",
   "advancements.goety.summon_redstone_golem.title": "千锤百炼",
   "advancements.goety.summon_redstone_golem.description": "用活力核心召唤红石傀儡.",
-  "advancements.goety.summon_grave_golem.title": "Gravedigger",
-  "advancements.goety.summon_grave_golem.description": "Summon a Grave Golem with an Animation Core.",
+  "advancements.goety.summon_grave_golem.title": "掘墓人",
+  "advancements.goety.summon_grave_golem.description": "使用活力核心生成一个墓灵巨像.",
   "advancements.goety.become_lich.title": "超越自我",
   "advancements.goety.become_lich.description": "超凡为巫妖，成为真正的不朽!",
 
