Added new spells, made Forbidden Piece more easier to craft.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -117,7 +117,9 @@
   "entity.goety.fireball": "Small Fireball",
   "entity.goety.lavaball": "Fireball",
   "entity.goety.grand_lavaball": "Grand Fireball",
+  "entity.goety.dragon_fireball": "Dragon Fireball",
   "entity.goety.haunted_skull_shot": "Haunted Skull",
+  "entity.goety.wither_skull": "Wither Skull",
   "entity.goety.sword":"Flying Sword",
   "entity.goety.ice_spike":"Ice Spike",
   "entity.goety.death_arrow":"Death Arrow",
@@ -357,20 +359,24 @@
   "item.goety.spooky_focus": "Spooky Focus",
   "item.goety.vanguard_focus": "Vanguard Focus",
   "item.goety.skull_focus": "Skull Focus",
+  "item.goety.wither_skull_focus": "Wither Skull Focus",
   "item.goety.iceology_focus": "Iceology Focus",
   "item.goety.barricade_focus": "Barricade Focus",
   "item.goety.illusion_focus": "Mirror Focus",
   "item.goety.feast_focus": "Feasting Focus",
   "item.goety.teeth_focus": "Teeth Focus",
+  "item.goety.fire_breath_focus": "Fire Breath Focus",
   "item.goety.fireball_focus": "Fireball Focus",
   "item.goety.lavaball_focus": "Lava Bomb Focus",
   "item.goety.soul_bolt_focus": "Soul Bolt Focus",
   "item.goety.magic_bolt_focus": "Magic Bolt Focus",
   "item.goety.sword_focus": "Magic Sword Focus",
+  "item.goety.frost_breath_focus": "Frost Breath Focus",
   "item.goety.ice_spike_focus": "Ice Spike Focus",
   "item.goety.hail_focus": "Hail Focus",
   "item.goety.updraft_focus": "Updraft Focus",
   "item.goety.wind_blast_focus": "Wind Blast Focus",
+  "item.goety.shocking_focus": "Shocking Focus",
   "item.goety.charge_focus": "Charge Focus",
   "item.goety.lightning_focus": "Lightning Focus",
   "item.goety.shockwave_focus": "Shockwave Focus",
@@ -703,6 +709,8 @@
   "info.goety.totem_of_souls.souls": "§aSoul Energy: %d/%d§a",
   "info.goety.wand.cost": "§3Soul Cost:§3 %d",
   "info.goety.wand.focus": "§dFocus:§d %d",
+  "info.goety.wand.castTime": "§fCast Time:§f %ds",
+  "info.goety.wand.coolDown": "§fCooldown:§f %ds",
   "info.goety.armor.discount": "Soul Discount",
   "info.goety.focus.cost": "§bOriginal Cost:§b %d",
   "info.goety.focus.spellType": "§dSpell Type:§d %d",
@@ -791,6 +799,35 @@
   "tooltip.goety.focusBag.swap": "Swap",
   "tooltip.goety.focusBag.extract": "Extract",
   "tooltip.goety.focusBag.empty": "Empty",
+
+  "painting.goety.apostle.author": "Unknown",
+  "painting.goety.apostle.title": "Dark Lord",
+  "painting.goety.bobby.author": "Julia Lepetit",
+  "painting.goety.bobby.title": "Bobby",
+  "painting.goety.crypt.author": "Mich",
+  "painting.goety.crypt.title": "Grave Mound",
+  "painting.goety.feng.author": "Polarice",
+  "painting.goety.feng.title": "Fight the Dweller",
+  "painting.goety.knuckles.author": "Knuckles",
+  "painting.goety.knuckles.title": "Knuckles",
+  "painting.goety.lizardcalm.author": "Nathan Yaffe",
+  "painting.goety.lizardcalm.title": "Lizard Calm",
+  "painting.goety.mansion.author": "Illa",
+  "painting.goety.mansion.title": "Mansion",
+  "painting.goety.minister.author": "W. Garner",
+  "painting.goety.minister.title": "Minisque",
+  "painting.goety.movie.author": "Pix. Ai",
+  "painting.goety.movie.title": "Movie Poster",
+  "painting.goety.mraeg_joey.author": "Runegod",
+  "painting.goety.mraeg_joey.title": "Mraeg Joey",
+  "painting.goety.revelation.author": "Unknown",
+  "painting.goety.revelation.title": "Revelation",
+  "painting.goety.stonedrake.author": "Yog",
+  "painting.goety.stonedrake.title": "The Stone Drake",
+  "painting.goety.thepants.author": "Polarice",
+  "painting.goety.thepants.title": "The Pants",
+  "painting.goety.wraith.author": "Unknown",
+  "painting.goety.wraith.title": "Wraith",
 
   "subtitle.goety.apostle_ambient": "Apostle mutters",
   "subtitle.goety.apostle_hurt": "Apostle hurts",
@@ -954,6 +991,8 @@
   "subtitle.goety.rumble": "Rumbling",
   "subtitle.goety.tooth_spawn": "Tooth appears",
   "subtitle.goety.impale": "Impale",
+  "subtitle.goety.ice_spike_cast": "Casts Spell",
+  "subtitle.goety.ice_spike_shoot": "Ice Spike Shoot",
   "subtitle.goety.ice_spike_hit": "Ice Spike Impact",
   "subtitle.goety.spell_fail": "Magic Failure",
   "subtitle.goety.fire_tornado_ambient": "Flaming Tornado",
@@ -1151,6 +1190,8 @@
   "death.attack.goety.shock.player": "%1$s was electrocuted whilst fighting %2$s",
   "death.attack.goety.fireBreath": "%1$s has been burned by %2$s",
   "death.attack.goety.fireBreath.item": "%1$s has been burned by %2$s using %3$s",
+  "death.attack.goety.frostBreath": "%1$s has been chilled by %2$s",
+  "death.attack.goety.frostBreath.item": "%1$s has been chilled by %2$s using %3$s",
   "death.attack.goety.boiling": "%1$s was made into stew",
   "death.attack.goety.boiling.player": "%1$s was boiled whilst fighting %2$s",
   "death.attack.goety.phobia": "%1$s died of fear",
