Fixed Server Crash and updated Chinese Translation.

--- a/src/main/resources/assets/goety/lang/zh_cn.json
+++ b/src/main/resources/assets/goety/lang/zh_cn.json
@@ -372,9 +372,9 @@
   "item.goety.soul_bolt_focus": "灵魂束聚晶",
   "item.goety.magic_bolt_focus": "魔力束聚晶",
   "item.goety.sword_focus": "魔力剑聚晶",
+  "item.goety.hail_focus": "冰雹聚晶",
   "item.goety.frost_breath_focus": "霜呼聚晶",
   "item.goety.ice_spike_focus": "冰刺聚晶",
-  "item.goety.hail_focus": "冰雹聚晶",
   "item.goety.updraft_focus": "上升气流聚晶",
   "item.goety.wind_blast_focus": "风爆聚晶",
   "item.goety.shocking_focus": "震撼聚晶",
@@ -464,7 +464,7 @@
   "block.goety.skull_pile": "骷髅堆",
 
   "block.goety.haunted_sapling": "缠魂树苗",
-  "block.goety.potted_haunted_sapling": "Potted Haunted Sapling",
+  "block.goety.potted_haunted_sapling": "缠魂树苗盆栽",
   "block.goety.haunted_log": "缠魂原木",
   "block.goety.haunted_planks": "缠魂木板",
   "block.goety.haunted_door": "缠魂木门",
@@ -477,16 +477,16 @@
   "block.goety.haunted_button": "缠魂木按钮",
   "block.goety.haunted_pressure_plate": "缠魂木压力板",
   "block.goety.haunted_sign": "缠魂木告示牌",
-  "block.goety.haunted_wall_sign": "Haunted Wall Sign",
+  "block.goety.haunted_wall_sign": "缠魂告示牌",
   "block.goety.haunted_bookshelf": "缠魂木书架",
   "block.goety.haunted_chest": "缠魂木箱",
   "block.goety.trapped_haunted_chest": "缠魂木陷阱箱",
-  "block.goety.dark_pressure_plate": "Dark Pressure Plate",
+  "block.goety.dark_pressure_plate": "黑暗压力板",
   "block.goety.stripped_haunted_log": "去皮缠魂原木",
   "block.goety.stripped_haunted_wood": "去皮缠魂木",
 
   "block.goety.rotten_sapling": "朽烂树苗",
-  "block.goety.potted_rotten_sapling": "Potted Rotten Sapling",
+  "block.goety.potted_rotten_sapling": "朽木树苗盆栽",
   "block.goety.rotten_log": "朽木原木",
   "block.goety.rotten_planks": "朽木板",
   "block.goety.rotten_leaves": "朽木叶子",
@@ -500,7 +500,7 @@
   "block.goety.rotten_button": "朽木按钮",
   "block.goety.rotten_pressure_plate": "朽木压力板",
   "block.goety.rotten_sign": "朽木告示牌",
-  "block.goety.rotten_wall_sign": "Rotten Wall Sign",
+  "block.goety.rotten_wall_sign": "朽木告示牌",
   "block.goety.rotten_bookshelf": "朽木书架",
   "block.goety.rotten_chest": "朽木箱",
   "block.goety.trapped_rotten_chest": "朽木陷阱箱",
@@ -934,7 +934,7 @@
   "subtitle.goety.redstone_golem_pre_attack": "红石傀儡：准备攻击",
   "subtitle.goety.redstone_golem_attack": "红石傀儡：粉碎攻击",
   "subtitle.goety.redstone_golem_novelty": "红石傀儡：恐吓",
-  "subtitle.goety.redstone_golem_chest": "Redstone Golem smash chest",
+  "subtitle.goety.redstone_golem_chest": "红石傀儡：粉碎打击",
   "subtitle.goety.redstone_golem_growl": "红石傀儡：怒吼",
   "subtitle.goety.redstone_golem_step": "红石傀儡：行走",
   "subtitle.goety.redstone_golem_death": "红石傀儡：死亡",
@@ -1018,19 +1018,19 @@
   "commands.goety.soul.set.success.single": "将 %s 灵魂能量设置给 %s",
   "commands.goety.soul.set.success.multiple": "将 %s 灵魂能量设置给 %s 个玩家",
   "commands.goety.soul.set.points.invalid": "灵魂能量设置错误",
-  "commands.goety.illager.rest.set.points.invalid": "Error for Rest Period setting ticks",
   "commands.goety.soul.failed": "%s 没有灵魂能量容器!",
-  "commands.goety.illager.spawn.success": "Summoned Illagers hunting %s successfully",
+  "commands.goety.illager.rest.set.points.invalid": "设置猎杀队休整刻度错误",
+  "commands.goety.illager.spawn.success": "成功生成了灾厄村民猎杀队 %s",
   "commands.goety.illager.spawn.failure": "%s 没有足够的灵魂能量使掠夺者生成",
-  "commands.goety.illager.rest.get.success": "%s has %s of rest period",
-  "commands.goety.illager.rest.add.success.single": "Add %s rest period ticks on %s",
-  "commands.goety.illager.rest.add.success.multiple": "Add %s rest period ticks on %s players",
-  "commands.goety.illager.rest.set.success.single": "Set %s rest period ticks on %s",
-  "commands.goety.illager.rest.set.success.multiple": "Set %s rest period ticks on %s players",
+  "commands.goety.illager.rest.get.success": "%s 已经 %s 到休整期了",
+  "commands.goety.illager.rest.add.success.single": "给 %s 增加了 %s 休整期",
+  "commands.goety.illager.rest.add.success.multiple": "增加 %s 休整刻 给 %s 玩家",
+  "commands.goety.illager.rest.set.success.single": "设置 %s 休整期给 %s",
+  "commands.goety.illager.rest.set.success.multiple": "设置 %s 休整期给 %s 玩家",
   "commands.summon_noai.success": "生成了新的无ai的 %s",
   "commands.summon_persist.success": "生成了新的有抗性的 %s",
   "commands.summon_tame.success": "生成了新的被驯服的 %s",
-  "commands.summon_hostile.success": "Summoned new Hostile %s",
+  "commands.summon_hostile.success": "召唤了新的敌人 %s",
   "commands.goety.research.get": "%s 已经有了这些研究:",
   "commands.goety.research.get.empty": "%s 还没有研究",
   "commands.goety.research.add.success": "增加研究给 %s",
